[package]
name = "endlessh-rs"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
owo-colors = "3.5"
rand = "0.8"
tokio = { version = "1.31", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
